# stack-wizard

./: .gitignore  API_TESTING_SUMMARY.md  FEATURE_SUMMARY.md  QUICK_REFERENCE.md  README.md  STACK_RECOMMENDATION_GUIDE.md  TESTING.md  examples.py  run_all_benchmarks.sh  run_tests.sh  stack_recommender.py  test_recommender.py
cpp/: CMakeLists.txt  api_requests.cpp  api_results.json  fibonacci.cpp  main.cpp  matrix.cpp  sorting.cpp  strings.cpp
csharp/: ApiRequests.cs  Fibonacci.cs  Matrix.cs  Program.cs  Sorting.cs  StackWizard.csproj  Strings.cs  api_results.json
csharp/Tests/: ApiRequestsTests.cs  README.md  StackWizard.Tests.csproj
elixir/: api_results.json  mix.exs  run_all.exs
elixir/lib/: api_requests.ex  fibonacci.ex  matrix.ex  sorting.ex  strings.ex
elixir/test/: api_requests_test.exs
go/: api_requests.go  api_results.json  fibonacci.go  go.mod  main.go  matrix.go  sorting.go  strings.go
java/: api_results.json  pom.xml
java/src/: ApiRequests.java  Fibonacci.java  (+4 more)
javascript/: api_requests.js  api_results.json  fibonacci.js  matrix.js  package.json  run_all.js  sorting.js  strings.js
python/: api_requests.py  api_results.json  fibonacci.py  matrix.py  requirements.txt  run_all.py  sorting.py  strings.py
ruby/: Gemfile  api_requests.rb  api_results.json  fibonacci.rb  matrix.rb  run_all.rb  sorting.rb  strings.rb
rust/: Cargo.toml  api_results.json
rust/src/: api_requests.rs  fibonacci.rs  main.rs  matrix.rs  sorting.rs  strings.rs
scala/: api_results.json  build.sbt
visualizations/: README.md  generate_graphs.py  requirements.txt
(+7 files in other folders)
