[package]
name = "stack-wizard-rust-benchmarks"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
regex = "1.10"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
